# arch_pattern_w_python

./: .gitignore  TODO.md  TODO_DEV_SETUP.md  pyproject.toml
ch1/: model.py
ch2/: conftest.py  db_config.py  dependency_injection.py  dev.db  main.py  model.py  orm.py  repository.py  test.db  test_batches.py  test_orm.py  test_repository.py
ch3/: file_sync.py  test_file_sync.py
ch3/dest/: README.md  file.md
