[project]
name = "arch-pattern-w-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2, <4.0"
dependencies = [
    "sqlalchemy>=2.0.48",
    "fastapi[standard] (>=0.135.3,<0.136.0)",
]

[dependency-groups]
dev = [

    "ipython>=9.11.0",
    "pytest>=9.0.2",
    "taskipy (>=1.14.1,<2.0.0)",
]

[tool.taskipy.tasks]
"test" = "pytest -vv"
"run" = "fastapi dev main.py"
